<resources>
    <string name="app_name">Freeway Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_route_select">Select Route</string>
    <string name="startTrip_begin_title">I\'m starting from</string>
    <string name="startTrip_begin_prompt">Enter starting point</string>
    <string name="startTrip_end_title">and driving to</string>
    <string name="startTrip_end_prompt">Enter destination</string>
    <string name="startTrip_date_title">on</string>
    <string name="startTrip_time_title">at</string>
    <string name="startTrip_get_directions">Get Directions</string>
    <string name="loading_weather">Loading Weather…</string>
    <string name="selectRoute_activity_title">Select Route</string>
    <string name="settings_temperature_scale_title">Temperature Scale</string>
    <string name="title_activity_trip_forecast">Trip Forecast</string>
    <string name="startTrip_select_route">Select Route</string>
    <string name="hourTimeAndDetail">More weather info here AND TIME</string>
    <string name="hourQuickForecast">Cloudy in Boston</string>
    <string name="rowTime">10:00</string>
    <string name="hourTemp">10°</string>
    <string name="pick_time">Time</string>
    <string name="pick_date">Date</string>
    <string name="temp_fahrenheit">Fahrenheit</string>
    <string name="temp_celsius">Celsius</string>
    <string name="temp_kelvin">Kelvin</string>
    <string name="distance_miles">Miles</string>
    <string name="distance_kilometers">Kilometers</string>
    <string name="otto_license">
        Copyright 2012 Square, Inc.\n
        Copyright 2010 Google, Inc.\n\n
        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n
            http://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="weather_thunderstorm_light_rain">Thunderstorm with light rain</string>
    <string name="settings_metric_title">Use metric distances</string>
</resources>