<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp" >
    <!-- Weather Icon for the hour-->
    <ImageView
        android:id="@+id/hourIcon"
        android:contentDescription="@string/app_name"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/clouds"
        android:padding="3dp" />
    <!-- City or location for the hour -->
    <TextView
        android:id="@+id/hourQuickForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/hourIcon"
        android:layout_marginLeft="3dp"
        android:layout_centerVertical="true"
        android:paddingBottom ="10dip"
        android:textColor="#040404"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/hourQuickForecast"/>
    <!-- Weather Information for the hour-->
    <TextView
        android:id="@+id/hourTimeAndDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hourQuickForecast"
        android:layout_alignLeft="@id/hourQuickForecast"
        android:layout_centerHorizontal="true"
        android:textColor="#343434"
        android:textSize="16sp"
        android:text="@string/hourTimeAndDetail"/>
    <!-- Temperature for the hour -->
    <TextView
        android:id="@+id/hourTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingLeft="0dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/hourTemp"/>
</RelativeLayout>