<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/tripStartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/startTrip_begin_title"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/tripStartAddress"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:layout_below="@+id/tripStartTitle"
        android:layout_alignLeft="@+id/tripEndAddress"
        android:layout_alignStart="@+id/tripEndAddress"
        android:inputType="textPostalAddress|textCapWords"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tripEndTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tripStartAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/startTrip_end_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/tripEndAddress"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/tripEndTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPostalAddress|textCapWords"
        android:singleLine="true"/>

    <!--android:onClick="showDatePickerDialog"-->
    <EditText
        android:id="@+id/tripStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/tripEndAddress"
        android:layout_alignStart="@+id/tripEndAddress"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:id="@+id/tripDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTrip_date_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignBaseline="@+id/tripStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/startTrip_time_title"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/tripStartDate"
        android:layout_alignLeft="@+id/tripDateTitle"
        android:layout_alignStart="@+id/tripDateTitle" />

    <EditText
        android:id="@+id/tripStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:layout_alignTop="@+id/timeTitle"
        android:layout_alignLeft="@+id/tripStartDate"
        android:layout_alignStart="@+id/tripStartDate"
        android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/submitTimesAndPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="getRoutes"
        android:text="@string/startTrip_get_directions" />

</RelativeLayout>
